--- a/loginms/package.json
+++ b/loginms/package.json
@@ -5,12 +5,13 @@
   "main": "loginms.js",
   "scripts": {
     "start": "node loginms.js",
-    "test": "jest"
+    "test": "jest --detectOpenHandles"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "amqplib": "^0.10.3",
+    "axios": "^1.6.7",
     "express": "^4.18.2",
     "jest": "^29.7.0",
     "jsonwebtoken": "^9.0.2",
